# mySimpleComputer

./: CMakeLists.txt  Makefile  main.c  memory.c  register.c  script  script.bash  script.sh  script2.ch  script2.sh  stat.h
SimpleAssembler/: Makefile  ass  ass.sa  main.c  parser.c  parser.h
SimpleAssembler/test/: ass.sa  main.c  makefile  parse.c  parse.h  simpAss
SimpleBasic/: Makefile  bas.sa  bas.sb  basic  file.sa  file.sb  inst.c  inst.h  instruction.c  instruction.h  main.c  prog.sa  prog.sb  string.c  string.h  tree.c  tree.h
SimpleBasic/simpleBasic/: file.sa  file.sb  instruction.c  instruction.h  main.c  makefile  parse.c  parse.h  simpBasic  string.c  string.h  tree.c  tree.h
SimpleBasic/tmp/: tree.h
SimpleBasic/tmp2/: tree.c  tree.h
SimpleBasic/tmp3/: instruction.c  instruction.h
SimpleBasic/tmp4/: tree.c
SimpleCompLibrary/: CMakeCache.txt  CMakeLists.txt  Makefile  Program  cmake_install.cmake  cpu.c  cpu.h  main.c  memory.c  memory.h  myBigChars.c  register.c  register.h  save.b  shell.c  shell.h  terminal.c  terminal.h
hard/: 0  file  hard.c  hard.rar  main.c
